# CarData

./: .gitignore  README.md  pyproject.toml  scripts.py  setup.py
common/domain/: entities.py
common/exception/: IllegalArgumentError.py  JsonDecodeError.py
common/repository/: BrandRepository.py  Entities.py  ManufacturerRepository.py  ModelAttributeRepository.py  ModelRepository.py  RawDataRepository.py  SessionFactory.py  test_BrandRepository.py  test_ManufacturerRepository.py  test_ModelAttributeRepository.py  test_ModelRepository.py  test_RawDataRepository.py
domain/json/: JsonEncoder.py
extractor/: Extractor.py  ModelInfoScraper.py  ModelInfoScraperFactory.py  integrationTest_Extractor.py  test_ModelInfoScraper.py
extractor/common/: DbClient.py  HttpClient.py  fetchAndPersist.py  fetchModelData.py  integrationTest_fetchAndPersist.py  integrationTest_persistModelData.py  persistModelData.py  test_fetchAndPersist.py  test_fetchModelData.py
extractor/gm/: ChevroletScraper.py  GmScraper.py  notes  test_ChevroletScraper.py  test_GmScraper.py
extractor/scraper/: ModelInfoScraper.py  __init__.py  test_ModelInfoScraper.py
persister/: integrationTest_persistModelData.py
repository/: DataTypes.py  Entities.py  SessionFactory.py  __init__.py  dto.py
service/: BrandService.py  ManufacturerService.py  ModelAttributeService.py  ModelService.py  RawDataService.py  __init__.py  test_BrandService.py  test_ManufacturerService.py  test_ModelAttributeService.py  test_ModelService.py  test_RawDataService.py
transformer/: Transformer.py  test_EndToEnd.py
(+184 files in other folders)
